# neoassist

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/: log_config.py
examples/dataset/faq/: convert_to_qrj.py  corpus.xlsx  queries.xlsx
examples/dataset/llk/: faq.py  synthetic_faq.py
examples/dataset/web/: convert_to_qrj.py
examples/retrieval/: evaluate_openai.py
src/neoassist/: __init__.py  utils.py
src/neoassist/retrieval/: openai.py
src/neocore/: __init__.py  metrics.py
tests/: test_metrics.py  test_neocore.py
