[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "neocore"
version = "0.1.0"
description = "A package for developing AI assistants."
authors = [
    { name = "Evgeniy Kononov", email = "cononow.jenya2015@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pymilvus>=2.6",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff>=0.12.11",
    "pyright>=1.1.405",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "C90"]
ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120
