[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "neoassist"
version = "0.1.0"
description = "A package for developing AI assistants."
authors = [
    { name = "Evgeniy Kononov", email = "cononow.jenya2015@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "colorlog>=6.9.0",
    "huggingface-hub>=0.35.1",
    "openpyxl>=3.1.5",
    "ir-datasets>=0.5.11",
    "ir-measures>=0.4.1",
    "openai>=1.109.1",
    "pymilvus>=2.6",
    "python-json-logger>=3.3.0",
    "ranx>=0.3.21",
    "requests>=2.32.5",
    "typer>=0.19.2",
    "unstructured[all-docs]>=0.18.15",
    "docling>=2.58.0",
    "pandera[pandas]>=0.26.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.9",
    "pytest>=8.4",
    "ruff>=0.12.11",
    "pyright>=1.1.405",
    "pytest-cov>=7.0.0",
    "myst-nb>=1.3.0",
    "sphinx-autoapi>=3.6.0",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "C90"]
ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
